--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
+.container{
+    width: 1430px;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 header{
     z-index: 100;
     display: flex;
@@ -69,6 +75,8 @@ header nav:hover > a:not(:hover){
     padding: 50px;
     background: #3B3291;
     color: white;
+    overflow: hidden;
+    height: 1500px;
 }
 .about h1{
     font-size: 40px;
@@ -76,4 +84,21 @@ header nav:hover > a:not(:hover){
 }
 .about p{
     margin-bottom: 10px;
+    width: 500px;
+
+}
+.about-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.about-content{
+    position: absolute;
+    top: 20%;
+    left: -500px;
+}
+.about-img{
+    position: absolute;
+    top: 10%;
+    right: -500px;
 }
